<resources>
    <string name="app_name">Tracker</string>
    <!--

    -->

    <string name="tile_label">Example tile</string>
    <string name="title_activity_presentation._main">presentation.MainActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="complication_label">Example complication</string>

    <string name="Wel">Welcome, on Tracker app</string>
    <string name="Motiv">Movement is life</string>

    <string name="Login">Login</string>
    <string name="Pass">Password</string>
    <string name="Log">Enter</string>

    <string name="exam">Calendar</string>
    <string name="map">Map</string>
    <string name="history">History</string>
    <string name="steps">Steps</string>
</resources>