<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Loading"
    android:orientation="vertical"
    android:background="@color/green">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"


        android:fontFamily="@font/aclonica"
        android:text="@string/app_name"
        android:textColor="@color/black" />

    <ImageView
        android:id="@+id/loading_image"
        android:layout_marginTop="5dp"
        android:layout_width="85dp"
        android:layout_height="69dp"
        android:layout_gravity="center"
        android:background="@drawable/icon" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/Wel"
        android:fontFamily="@font/aclonica"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/Motiv"
        android:fontFamily="@font/aclonica"
        android:textSize="11dp"
        android:layout_marginTop="3dp"
        android:layout_gravity="center"/>

</LinearLayout>