<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main"
    android:background="@color/green"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/app_name"
        android:textColor="@color/black" />
<LinearLayout
    android:layout_marginTop="15dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:background="@drawable/spisok"
            android:onClick="CalenadrButton"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:textSize="11dp"

            android:fontFamily="@font/aclonica"
            android:text="@string/exam"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:background="@drawable/foots" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/aclonica"
            android:text="@string/steps"
            android:textColor="@color/black" />
    </LinearLayout>
</LinearLayout>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="34dp"
                android:layout_height="32dp"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:background="@drawable/history" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/aclonica"
                android:text="@string/history"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:background="@drawable/map" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/aclonica"
                android:text="@string/map"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>